Add API event update endpoint
